# wanikani.rs

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  NOTES.md  README.md  TODO.md
examples/: 01_simple.rs
examples/01_test/: Cargo.toml
examples/01_test/src/: args.rs  main.rs
src/: client.rs  error.rs  filters.rs  lib.rs  model.rs  requester.rs  test_helpers.rs
src/model/: assignment.rs  level_progression.rs  mod.rs  reset.rs  review.rs  review_statistic.rs  study_material.rs  subject.rs  summary.rs  user.rs
tests/: test_models.rs
tests/fixtures/: assignment.json  subject.json  user.json
tests/helpers/: fixtures.rs  generators.rs  mod.rs
