[package]
name        = "wanikani"
version     = "0.1.3"
authors     = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
description = "Unofficial client for the WaniKani API"
license     = "MIT"
repository  = "https://gitlab.com/valeth/wanikani.rs.git"
homepage    = "https://gitlab.com/valeth/wanikani.rs"
keywords    = ["api", "wanikani"]
readme      = "README.md"

[dependencies]
reqwest          = "0.8"
serde            = "^1.0"
serde_derive     = "^1.0"
serde_json       = "^1.0"
serde_urlencoded = "0.5.1"

[dependencies.chrono]
version  = "0.4"
features = ["serde"]

[dev-dependencies]
docopt = "0.8"

[[example]]
name = "01_simple"
